--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@
 # edad=28
 # arthur.edad=27
 
-spring.datasource.url=jdbc:mysql://localhost:3306/cocina-db
+spring.datasource.url=jdbc:mysql://localhost:3306/cocinaDb
 spring.datasource.username=root
-spring.datasource.password=somesecretpassword
+spring.datasource.password=root
